# rust-coalesce-worker

./: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README.zh-CN.md
examples/: coalesce_demo.rs
src/: lib.rs
