[package]
name = "coalesce-worker"
version = "0.1.1"
description = "Coalescing worker thread with generation-counter stale-result rejection — the discipline needed to run tree-sitter (or any expensive computation) off the main thread without applying out-of-date results"
keywords = ["coalescing", "worker", "debounce", "tree-sitter", "background"]
categories = ["asynchronous", "concurrency", "gui"]
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/goliajp/rust-coalesce-worker"
homepage = "https://github.com/goliajp/rust-coalesce-worker"
authors = ["GOLIA株式会社", "Li Hao <lihao@golia.jp>"]
readme = "README.md"
documentation = "https://docs.rs/coalesce-worker"

[dependencies]

[[example]]
name = "coalesce_demo"

[profile.release]
lto = true
codegen-units = 1
